syntax = "proto3";

package Common.Proto.Entity;

enum EntityType {
    PLAYER = 0;
    MONSTER = 1;
    NPC = 2;
    MISSILE = 3;
}